--- a/src/config/settings_data.json
+++ b/src/config/settings_data.json
@@ -70,7 +70,7 @@
         "settings": {
           "announcement_bar_enabled": true,
           "shipping_text": "<p><strong>Free Shipping when you order 4 or more<\/strong><\/p>",
-          "promo_text": "<p><strong>3 for $25 |&nbsp;6&nbsp;for&nbsp;$40<\/strong>&nbsp;WITH&nbsp;PROMO&nbsp;CODE:&nbsp;<em>6FOR40<\/em><\/p>\n<p><em>&nbsp;<\/em><\/p>",
+          "promo_text": "<p><strong>Any 3 Packs for $25 |&nbsp;6&nbsp;for&nbsp;$40<\/strong>&nbsp;WITH CODE:&nbsp;<em>6FOR40<\/em><\/p>\n<p><em>&nbsp;<\/em><\/p>",
           "logo": "shopify:\/\/shop_images\/xpand-dark-logo_410x1_1b6691b5-3267-44aa-a692-2bb6e607b6ee.png",
           "primary_menu": "new-main-menu-2",
           "secondary_menu": "new-second-menu-2",
@@ -131,8 +131,8 @@
       "1557977971910": {
         "type": "text-banner",
         "settings": {
-          "title": "COMFORT. STYLE. PERFORMANCE.",
-          "text": "<p><strong>No-Tie Shoelace System - Adults &amp; Kids<\/strong><\/p>",
+          "title": "NEVER TIE YOUR SHOELACES AGAIN.",
+          "text": "<p><strong>No-Tie Shoelaces - Adults &amp; Kids<br><\/strong><\/p>",
           "cta_text": "SHOP NOW",
           "cta_link": "shopify:\/\/products\/no-tie-original-elastic-lacing-system"
         }
@@ -202,7 +202,7 @@
           "1558075411721"
         ],
         "settings": {
-          "title": "Our Satisfaction Guarantee",
+          "title": "Satisfaction Guaranteed",
           "cta_text": "SHOP NOW",
           "cta_link": "shopify:\/\/products\/no-tie-original-elastic-lacing-system"
         }
@@ -458,7 +458,7 @@
           "promo_one": "3 for $25",
           "promo_two": "6 FOR $40",
           "promo_three": "8 FOR $50",
-          "code_one": "AUTO-APPLIED",
+          "code_one": "",
           "code_two": "CODE: 6FOR40",
           "code_three": "CODE: 8FOR50"
         }
